# market

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile
backend/accounts/: authentication.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/accounts/models/: __init__.py  custom_user.py
backend/accounts/serializers/: __init__.py  custom_user.py
backend/carts/: urls.py  utils.py  views.py
backend/carts/models/: __init__.py  cart.py  cart_item.py
backend/carts/serializers/: __init__.py  cart.py  cart_item.py
backend/carts/views/: __init__.py  cart_view.py
backend/commons/: paginations.py  permissions.py
backend/core/: celery.py  settings.py  urls.py
backend/orders/: urls.py  utils.py  views.py
backend/orders/models/: __init__.py  order.py  order_item.py
backend/orders/serializers/: __init__.py  order.py  order_item.py
backend/orders/views/: __init__.py  buyer_view.py  seller_view.py
backend/products/: admin.py  filters.py  permissions.py  urls.py  utils.py  views.py
backend/products/models/: __init__.py  category.py  product.py  review.py
backend/products/serializers/: __init__.py  category.py  product.py  review.py
backend/products/views/: __init__.py  category_view.py  product_view.py
backend/profiles/: urls.py  views.py
backend/reviews/: urls.py  utils.py  views.py
backend/setupApp/: apps.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  routes.jsx
frontend/src/api/: auth.js  (+9 more)
(+56 files in other folders)
